@@ -1,6 +1,7 @@
 package de.xxschrandxx.wsc.wscprofile.bukkit;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.logging.Level;
 
@@ -37,7 +38,7 @@ public class MinecraftProfileBukkit extends JavaPlugin implements IMinecraftBrid
         String urlString = getConfiguration().getString(MinecraftProfileVars.Configuration.url);
         URL url;
         try {
-            url = new URL(urlString);
+            url = URI.create(urlString).toURL();
         } catch (MalformedURLException e) {
             getLogger().log(Level.INFO, "Could not load api, disabeling plugin!.", e);
             return;
